--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/all.css">
+    <link rel="icon" href="images/logo.ico">
     <script src="scripts/all.js"></script>
     <title>Alaa abd el fattah - wikipedia</title>
 </head>
