--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/all.css">
     <link rel="icon" href="images/logo.ico">
+    <link rel="stylesheet" href="styles/bootstrap.css">
     <script src="scripts/all.js"></script>
+    <script src="scripts/bootstrap.js"></script>
     <title>Alaa abd el fattah - wikipedia</title>
 </head>
 <body>
@@ -44,7 +46,7 @@
                 </li>
                 <li class="f-r">
                     <input type="text" id="in_se">
-                    <i class="fas fa-search" onclick="fa_search()"></i>
+                    <i class="fas fa-search" onclick="fa_search()" data-toggle="tooltip" data-placement="top" title="show search input" id="f_se"></i>
                 </li>
                 <li class="f-r">
                     <a href="">View history</a>
